[package]
name = "focus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
clap = { version = "4.4.12", features = ["derive"] }
kbar = "0.1.5"
argh = "0.1.12"
directories = "5.0.1"
simple-home-dir = "0.2.1"
serde = "1.0"
toml = "0.8.8"
crossterm = {version = "0.27.0", features = ["event-stream"]}
device_query = "1.1.3"
console = "0.15.7"
spinners = "4.1.1"
